--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-<h1> HELLO WORLD</h1>
+<h1> HELLO WORLD </h1>
+<p color = red>this is mayank dixit</p>
   </body>
 </html>
