--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
+<styles>
+h1 { color:blue; font-size:12px; }
+</styles>
+</head>
   <body>
 <h1> HELLO WORLD </h1>
-<p color = red>this is mayank dixit</p>
+<p color >This is mayank dixit</p>
   </body>
 </html>
