--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,14 @@
 <html>
 <head>
 	<styles>
-	h1 { color:blue; font-size:12px; }
+	.h1 {
+		color:blue;
+		font-size:12px;
+		}
 	</styles>
 </head>
   <body>
 	<h1> HELLO WORLD </h1>
-	<p >This is mayank dixit</p>
+	<p color:blue>This is mayank dixit</p>
   </body>
 </html>
