--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+	<head>
+	<style>
+  h1 {color:red;}
+  p {color:blue;}
+</style>
+		</head>
   <body>
 	<h1> HELLO WORLD </h1>
 	<p 'color'='blue'>This is mayank dixit</p>
